# esque-wire

./: .flake8  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  LICENSE  README.md  mypy.ini  pyproject.toml
.github/workflows/: publish.yml  release-prep.yml  testing.yaml
cluster_fixture/: __init__.py  __main__.py  base.py  cluster.py  kafka.py  test_cluster_fixture.py  watcher.py  zookeeper.py
cluster_fixture/kafka_config_templates/: server.properties.j2
esque_wire/: __init__.py  _base_connection.py  connection.py
esque_wire/protocol/: __init__.py  api_call.py  connection.py  constants.py  request.py
esque_wire/protocol/api/: __init__.py  add_offsets_to_txn.py  add_partitions_to_txn.py  alter_configs.py  alter_replica_log_dirs.py  api_versions.py  base.py  controlled_shutdown.py  create_acls.py  create_delegation_token.py  create_partitions.py  create_topics.py  delete_acls.py  delete_groups.py  delete_records.py  delete_topics.py  describe_acls.py  describe_configs.py  describe_delegation_token.py  describe_groups.py  describe_log_dirs.py  elect_preferred_leaders.py  end_txn.py  expire_delegation_token.py  fetch.py  find_coordinator.py  heartbeat.py  incremental_alter_configs.py  init_producer_id.py  join_group.py  leader_and_isr.py  leave_group.py  list_groups.py  list_offsets.py  metadata.py  offset_commit.py  offset_fetch.py  offset_for_leader_epoch.py  produce.py  renew_delegation_token.py  (+7 more)
esque_wire/protocol/serializers/: __init__.py  base.py  constants.py  generic.py  header.py  primitive.py
esque_wire/protocol/serializers/api/: __init__.py  _main_serializers.py  add_offsets_to_txn_request.py  add_offsets_to_txn_response.py  add_partitions_to_txn_request.py  add_partitions_to_txn_response.py  alter_configs_request.py  alter_configs_response.py  alter_replica_log_dirs_request.py  alter_replica_log_dirs_response.py  api_versions_request.py  (+81 more)
esque_wire/protocol/structs/: __init__.py  base.py  header.py
protocol_generator/: .gitignore  _schema_generator.py  generate_api_definition.py  jython_api_gen.py  jython_schema_generator.py  schema_generator.py
protocol_generator/templates/: __init__.py.j2  _base_connection.py.j2  base_module.py.j2  constants.py.j2
protocol_generator/templates/protocol/: constants.py.j2
protocol_generator/templates/serializers/: __init__.py.j2  constants.py.j2
protocol_generator/templates/structs/: __init__.py.j2
tests/: conftest.py  docker-compose.yml  kafka_cluster_fixture.py  test_protocol_messages.py  watcher.py
tests/cluster_fixture/: __init__.py  __main__.py  base.py  cluster.py  kafka.py  ssl_helper.py  test_cluster_fixture.py  watcher.py  zookeeper.py
tests/cluster_fixture/kafka_config_templates/: server.properties.j2
tests/integration/: conftest.py  test_protocol_messages.py
tests/kafka_config_templates/: sasl_jaas.conf.j2  server.properties.j2  zookeeper.properties.j2
tests/meta/: conftest.py  test_cluster_fixture.py
tests/unit/serializers/: test_primitive.py
(+103 files in other folders)
