[tool.poetry]
name = "esque-wire"
version = "0.1.0"
description = "A complete implementation of the Kafka API"
authors = ["real-digital <opensource@rea-digital.de>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.6"

[tool.poetry.dev-dependencies]
pytest = "^5.2.1"
jinja2 = "^2.10.3"
inflection = "^0.3.1"
dataclasses = { version = "^0.7", python = ">=3.6, <3.7"}
black = "19.3b0"
mypy = "^0.740"

[tool.black]
line-length = 119
target_version = ['py36']
include = '\.pyi?$'

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
