[tool.poetry]
name = "esque-wire"
version = "0.0.1"
description = "A complete implementation of the Kafka API"
authors = ["real-digital <opensource@real-digital.de>"]
license = "MIT"
readme = "README.md"

include = [
  "README.md",
  "LICENSE",
  "pyproject.toml",
  ]

exclude = ["tests/**/*"]

repository = "https://github.com/real.digital/esque-wire"

keywords = ["kafka", "cli", "commandline", "administration", "operation"]

classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Topic :: Software Development",
  "Topic :: Software Development :: Libraries",
  "Typing :: Typed",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3.6",
  "Programming Language :: Python :: 3.7",
  "Programming Language :: Python :: 3.8",
  ]

[tool.poetry.dependencies]
python = "^3.6"

[tool.poetry.dev-dependencies]
pytest = "^5.2.1"
jinja2 = "^2.10.3"
inflection = "^0.3.1"
dataclasses = { version = "^0.7", python = ">=3.6, <3.7"}
isort = {version = "^4.3", extras = ["pyproject"]}
black = "19.3b0"
mypy = "0.740"
pytest-cov = "^2.8.1"
coveralls = "^1.8.2"

[tool.black]
line-length = 119
target_version = ['py36']
include = '\.pyi?$'

[tool.isort]
line_Length = 119
multi_line_output = 3
include_trailing_comma = true
default_section = "THIRDPARTY"
known_first_party = ["esque_wire", "tests"]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
